@@ -1,3 +1,8 @@
+2007-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-entity-regexp): Bind max-specpdl-size for old Emacsen.
+	(w3m): Revert 2007-09-19 change.
+
 2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* NEWS: New file.
